--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>User Web Application</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/main.css}"/>
-</head>
+<head th:replace="fragments/header :: head"></head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">User Web Application</a>
-    </nav>
-    <main role="main" class="container">
-        <div class="info">
-            <h3 th:text="${title}?:'Page Not Found'"></h3>
-            <p th:text="${message}"></p>
-            <p><a href="javascript:history.back()">Back</a></p>
-        </div>
-    </main>
+
+<div th:replace="fragments/header :: navbar"></div>
+
+<div class="container-fluid">
+    <div class="row">
+
+        <div th:replace="fragments/header :: sidebar"></div>
+
+        <main role="main" class="container">
+            <div class="alert alert-danger mt-5">
+                <h3 th:if="${status == 403}">Page Not Found</h3>
+                <h3 th:if="${status == 404}">Page Not Found</h3>
+                <h3 th:if="${status == 500}">Server Error</h3>
+                <h3 th:if="${customError}" th:text="${title}"></h3>
+                <p th:if="${customError}" th:text="${message}"></p>
+            </div>
+            <p><a class="btn btn-s btn-primary" th:href="@{/}">Return</a></p>
+        </main>
+
+    </div>
+</div>
+
 </body>
 </html>
